fix(ARC-2188): add overflow ellipsis to meemoo id in search result cards
https://meemoo.atlassian.net/browse/ARC-2188

--- a/src/modules/shared/components/MediaCard/MediaCard.module.scss
+++ b/src/modules/shared/components/MediaCard/MediaCard.module.scss
@@ -161,6 +161,8 @@ $c-media-card-no-video-intended-spacing: 0.9rem;
 	:global(.c-card__subtitle-wrapper),
 	:global(.c-card__children-wrapper) {
 		line-height: $line-height-md * 2rem;
+		text-overflow: ellipsis;
+		overflow: hidden;
 	}
 
 	&__no-content {
